# baf-badges

./: .babelrc  .gitignore  README.md  contract-config.json  global.d.ts  next.config.js  package.json  tsconfig.json
components/: Footer.tsx  NotSignedIn.tsx  badgeCard.tsx  withLink.tsx  withNear.tsx  withNearWallet.tsx
components/AccountIndicator/: index.tsx
components/BadgeCard/: BadgeCard.tsx
components/Footer/: Footer.module.scss  Footer.tsx
components/FormWrappers/: index.ts
components/FormWrappers/MarkdownEditor/: MarkdownEditor.tsx
components/FormWrappers/TextArea/: TextArea.tsx
components/FormWrappers/TextInput/: TextInput.tsx
components/Layout/: Layout.module.scss  Layout.tsx
components/LessonCard/: LessonCard.tsx
components/LinkButton/: index.tsx
components/Markdown/: index.tsx
config/: nearConfig.ts
contract/: Cargo.toml  build.sh  deploy.js  dev-deploy.sh
contract/src/: lib.rs
contracts/: build.sh  dev-deploy.sh
contracts/minter/: Cargo.toml
contracts/minter/src/: lib.rs
contracts/nft/: Cargo.toml
contracts/nft/src/: lib.rs
neardev/: dev-account  dev-account.env
pages/: _app.tsx  index.tsx  lesson-graph.tsx  mint-badges.tsx  my-badges.tsx
pages/api/: uploadDocument.ts  uploadLesson.ts
pages/api/getRootLessons/: [limit].ts
pages/api/uploadDocument/: [badgeID].ts
pages/api/uploadMedia/: [badgeID].ts
styles/: Home.module.css  Index.module.scss  MyBadges.module.scss
utils/: badge.ts  badgeTypes.ts  constants.ts  crypto.ts  errors.ts  fleek.ts  init.ts  lesson.ts  misc.ts  near.ts
